# llm-shield

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md
infra/: prometheus.yml
infra/grafana/provisioning/dashboards/: llm-shield.json  provider.yml
policies/: balanced.yaml  permissive.yaml  strict.yaml
src/api/: main.py  routes.py  state.py
src/guardrails/: base.py  pipeline.py
src/guardrails/input/: __init__.py  length_check.py  pii_detector.py  prompt_injection.py  topic_classifier.py
src/guardrails/output/: __init__.py  format_validator.py  hallucination_check.py  pii_redactor.py  toxicity_filter.py
src/guardrails/policies/: policy_loader.py
src/llm/: client.py
src/observability/: logger.py  metrics.py
tests/: test_input_guards.py  test_output_guards.py  test_pipeline.py  test_policy_loader.py
